fixes border on Firefox + Safari #35

--- a/src/components/UI/Button/Button.css
+++ b/src/components/UI/Button/Button.css
@@ -4,7 +4,7 @@
   text-shadow: 0 2px 0 rgba(0, 0, 0, 0.07);
   background: var(--geel);
   border-radius: 10px;
-  border-color: #011627;
+  border: 1px solid #011627;
   color: #011627;
   box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2),
     0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 3px 1px -2px rgba(0, 0, 0, 0.12);
